add_subdirectory(server_example1)
add_subdirectory(server_example2)
add_subdirectory(server_example3)
add_subdirectory(server_example4)
add_subdirectory(server_example5)
add_subdirectory(server_example_goose)
add_subdirectory(server_example_control)
add_subdirectory(iec61850_client_example1)
add_subdirectory(iec61850_client_example2)
add_subdirectory(iec61850_client_example3)
add_subdirectory(goose_subscriber)
add_subdirectory(mms_client_example1)
add_subdirectory(mms_client_example2)
add_subdirectory(mms_client_example3)
add_subdirectory(mms_client_example4)
